--- a/DOM/second.html
+++ b/DOM/second.html
@@ -12,21 +12,25 @@
         <div>
           <label>Name:</label>
           <input type="text"  id="name" placeholder="Enter your name" name="name" />
+          <span id="nameError"> </span>
         </div>
         <br />
         
         <div>
           <label>Address:</label>
-          <input type="text"  id="2" placeholder="Enter your address" name="address"/>
+          <input type="text"  id="address" placeholder="Enter your address" name="address"/>
+          <span id="addressError"></span>
         </div>
         <br />
         <div>
             <label>Email:</label>
             <input type="email"  id="email" placeholder="Enter your email" name="email"/>
+            <span id="emailError"></span>
           </div>
           <br />
           <label>Password: </label>
-          <input type="password" name="" id="password" placeholder="Enter Password"/><br><br>
+          <input type="password" name="" id="password" placeholder="Enter Password"/><br>
+          <span id="passwordError"></span>
           <div>
             <label>Phone number:</label>
             <input type="text"  id="number" placeholder="Enter your phoneNumber" name="phoneNumber"/>
